# protobuf_example

./: .gitignore  CMakeLists.txt  README.md  writer.cpp
proto/: CMakeLists.txt
v1/: CMakeLists.txt  reader.cpp
v1/proto/: addressbook.proto
v2/: CMakeLists.txt  read.py  reader.cpp  writer.cpp
v2/proto/: CMakeLists.txt
