cmake_minimum_required(VERSION 2.6)
include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS addressbook.proto)
protobuf_generate_python(PROTO_PY addressbook.proto)
add_library(proto ${PROTO_HDRS} ${PROTO_SRCS})