cmake_minimum_required(VERSION 3.0)
project(test_protobuf)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(proto)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_executable(write_protobuf writer.cpp)
target_link_libraries(write_protobuf proto ${PROTOBUF_LIBRARY})
add_executable(read_protobuf reader.cpp)
target_link_libraries(read_protobuf proto ${PROTOBUF_LIBRARY})